--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -7,3 +7,42 @@ hide: true
 abbrlink: 28758
 date: 2021-04-19 10:36:29
 ---
+
+ZSB：这实际上有好蓝吗？用心听，拉有什么好蓝度呢？
+
+# 物理层
+
+# 数据链路层
+
+# 网络层
+
+网络层就是尽力转发数据，干这件事它已经精疲力尽了，别压榨了，别压榨了。
+
+中间设备是**路由器**（也叫网关）
+
+网际协议IP
+
+与其配套使用的有三个协议
+
+ARP地址解析协议
+
+ICMP网际控制报文协议
+
+IGMP国际组管理协议
+
+直接交付：不需要经过路由器
+
+间接交付：经过路由器转
+
+分类的IP,看第一个十进制（A类:0-127,B类:128-191,C类:192-223）
+
+网络字段全0表示自己，不能作为目的地址，全1表示广播，不能作为源地址
+
+太难了，更个屁，sajkadjasopdnsnxasljcnasjbcasjkbcasjbalk
+
+
+
+
+
+
+
