--- a/source/_posts/复习.md
+++ b/source/_posts/复习.md
@@ -77,6 +77,5 @@ var binft = function (r) {
  };
  binft(document.getElementById('binft'));
 </script>
-<a href="/2021/04/19/计算机网络/">计算机网络</a>
+<a href="/2021/04/19/PHP/">PHP</a>
 
-<a href="/2021/04/19/马原/">马原</a>
